[add] update to constructor work

--- a/index.html
+++ b/index.html
@@ -58,20 +58,10 @@
                     <div class = "row">
                         <div class = "col-md-4">
                             <div class = "list-group">
-                                <a href = "https://wwwmpa.mpa-garching.mpg.de/ift/nifty/" class = "list-group-item fix-height">
+                                <a href = "https://datalab.dbfz.de" class = "list-group-item">
                                     <center>
-                                        <img src = "img/nifty.png" alt = "NIFTY" class = "img-responsive" style = "margin: 21px 0 15px 0;">
-                                        <h4 class = "list-group-item-heading">Numerical Information Field Theory</h4>
-                                    </center>
-                                </a>
-                            </div>
-                        </div>
-                        <div class = "col-md-4">
-                            <div class = "list-group">
-                                <a href = "https://wwwmpa.mpa-garching.mpg.de/ift/d3po/" class = "list-group-item fix-height">
-                                    <center>
-                                        <img src = "img/d3po.png" alt = "D3PO" class = "img-responsive" style = "margin: 0 0 36px 0;">
-                                        <h4 class = "list-group-item-heading">Denoising, Deconvolving, and Decomposing Photon Observations</h4>
+                                        <img src = "img/DataLab_bars.svg" alt = "github" class = "img-responsive icon">
+                                        <h4 class = "list-group-item-heading">DataLab at DBFZ</h4>
                                     </center>
                                 </a>
                             </div>
@@ -81,18 +71,33 @@
                                 <a href = "https://github.com/mselig" class = "list-group-item">
                                     <center>
                                         <img src = "img/github_.png" alt = "github" class = "img-responsive icon">
-                                        <h4 class = "list-group-item-heading">on github.com</h4>
+                                        <h4 class = "list-group-item-heading">Marco on github.com</h4>
                                     </center>
                                 </a>
                             </div>
+                        </div>
+                        <div class = "col-md-4">
                             <div class = "list-group">
-                                <a href = "https://github.ibm.com/marco.selig" class = "list-group-item">
-                                        <center>
-                                            <h4 class = "list-group-item-heading">on github.<b>ibm</b>.com</h4>
-                                        </center>
+                                <a href = "https://ift.pages.mpcdf.de/nifty/user/old_nifty.html" class = "list-group-item">
+                                    <center>
+                                        <img src = "img/nifty.png" alt = "NIFTY" class = "img-responsive icon">
+                                        <h4 class = "list-group-item-heading">Numerical Information Field Theory</h4>
+                                    </center>
                                 </a>
                             </div>
                         </div>
+<!--
+                        <div class = "col-md-4">
+                            <div class = "list-group">
+                                <a href = "https://github.com/information-field-theory/d3po" class = "list-group-item fix-height">
+                                    <center>
+                                        <img src = "img/d3po.png" alt = "D3PO" class = "img-responsive" style = "margin: 0 0 36px 0;">
+                                        <h4 class = "list-group-item-heading">Denoising, Deconvolving, and Decomposing Photon Observations</h4>
+                                    </center>
+                                </a>
+                            </div>
+                        </div>
+-->
                     </div>
                 </div>
             </div>
